02 Jun 2002 Created "hercnls.h" module and fixed some typos/warnings - Fish
30 May 2002 Preliminary cfba (compressed fba) support - Greg Smith
30 May 2002 Various dasd fixes - Greg Smith
24 May 2002 Fixes for the cckd updates - Greg Smith
18 May 2002 More updates for cckd - Greg Smith
15 May 2002 Fix for MVPG problem as reported by Guy Przytula - Jan Jaeger
14 May 2002 Updates for cckd - Greg Smith
14 May 2002 Fix S/370 timer problem - Valery Pogonchenko
13 May 2002 NLS support for cckd utilities - Jan Jaeger
11 May 2002 NLS support - Jan Jaeger
08 May 2002 Fixes for 3350 dasdload - Greg Smith
08 May 2002 CodePage converion table 850/273 - Gerd Petermann
05 May 2002 Add some NLS definitions - Jan Jaeger
05 May 2002 Merge Debian patch to ckd2cckd.c to permit compilation with
            gcc 3.0, where printf may be a macro - Matt Zimmerman
04 May 2002 Fix panel.c attach command bug identified by Kris Van Hees
            since no on else has yet - Fish
01 May 2002 3390-9 and large file support - Greg Smith
01 May 2002 CodePage support - Jan Jaeger
29 Apr 2002 Fix fthreads "trylock" for REAL this time - Fish
29 Apr 2002 Create console thread dynamically - Jan Jaeger
25 Apr 2002 Hot fix for fthreads "trylock" oversight - Fish
21 Apr 2002 Fix various backwards merge problems with cckd - Greg Smith
19 Apr 2002 Fix cckdcdsk return code bug - Fish
18 Apr 2002 Disable syncio retry during IPL - Greg Smith
15 Apr 2002 IEEE floating point (attempt) for Win32 - Greg Smith
13 Apr 2002 Add description to ctci-w32 error message (w32ctca) - Fish
13 Apr 2002 Fix bug in w32chan "devtmax" logic (TrimDeviceThreads) - Fish
13 Apr 2002 Fix some benign warnings - Fish
13 Apr 2002 Move RC file processing to a separate thread - Fish
12 Apr 2002 Fix TRAP storing incorrect PSW in trap save area - Jan Jaeger
12 Apr 2002 Fix false specification exception in RP (64bit only) - Jan Jaeger
11 Apr 2002 Build device type table and device handler tables - Jan Jaeger